RESOLVED FIXED189980
Resource Load Statistics: Remove temporary compatibility fix for auto-dismiss popups
https://bugs.webkit.org/show_bug.cgi?id=189980
Summary Resource Load Statistics: Remove temporary compatibility fix for auto-dismiss...
John Wilander
Reported 2018-09-25 17:30:09 PDT
The change in https://bugs.webkit.org/show_bug.cgi?id=183620 was a temporary compatibility fix as explained in https://webkit.org/blog/8311/intelligent-tracking-prevention-2-0/. We should remove it.
Attachments
Patch (31.41 KB, patch)
2018-09-25 17:57 PDT, John Wilander
no flags
Radar WebKit Bug Importer
Comment 1 2018-09-25 17:31:01 PDT
John Wilander
Comment 2 2018-09-25 17:57:25 PDT
John Wilander
Comment 3 2018-09-27 12:13:52 PDT
Thanks, Alex! Let's see if the patch still applies. :P
WebKit Commit Bot
Comment 4 2018-09-27 12:40:23 PDT
Comment on attachment 350821 [details] Patch Clearing flags on attachment: 350821 Committed r236563: <https://trac.webkit.org/changeset/236563>
WebKit Commit Bot
Comment 5 2018-09-27 12:40:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.